# planagent

./: .env.example  PLAN.md  pyproject.toml
agent/: executor.py  llm.py  planner.py  schemas.py  tools.py
docs/intent/: planagent-mvp.md
docs/spec/: planagent-mvp.md
server/: app.py
tests/: test_executor.py  test_planner.py
web/: package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css
web/src/components/: ExecutionLog.tsx  PlanDisplay.tsx  ResultCard.tsx  TaskComposer.tsx
